--- a/Routine/Soa/View/SoaTestPage.html
+++ b/Routine/Soa/View/SoaTestPage.html
@@ -4,158 +4,44 @@
     <meta charset="utf-8" />
     <title>Soa Client</title>
     <style>
-        body {
-            font-family: Arial;
-            font-size:12px;
-            background-color:#f2efe8;
-        }
-        a {
-            text-decoration:none;
-            color:black;
-        }
-        a:hover {
-            text-decoration:underline;
-        }
-        .template, .options {
-            display: none;
-        }
-        .module, .model, .operation {
-            border: solid 1px gray;
-            padding:5px;
-            margin:5px;
-            cursor:pointer;
-            cursor:hand;
-        }
-        .module {
-            background-color: #dbe5f6;
-        }
-        .model {
-            background-color: #ffffff;
-        }
-        .operation {
-            background-color: #fae8e8;
-            cursor:initial;
-        }
-        .operation a {
-            float: right;
-        }
-        .form {
-            border: solid 1px gray;
-            margin: 5px;
-            padding: 5px;
-            width: 100%;
-            height:100%;
-            background-color: #ffffff;
-
-        }
-        h1, h2, h3, p {
-            margin: 0px;
-        }
+        body {font-family: Arial;font-size:12px;background-color:#f2efe8;}
+        a {text-decoration:none;color:black;}
+        a:hover {text-decoration:underline;}
+        .template, .options {display: none;}
+        .module, .model, .operation {border: solid 1px gray;padding:5px;margin:5px;cursor:pointer;cursor:hand;}
+        .module {background-color: #dbe5f6;}
+        .model {background-color: #ffffff;}
+        .operation {background-color: #fae8e8;cursor:initial;}
+        .operation a {float: right;}
+        .form {border: solid 1px gray;margin: 5px;padding: 5px;width: 100%;height:100%;background-color: #ffffff;}
+        h1, h2, h3, p {margin: 0px;}
         h1 {font-size:13px;}
         h2 {font-size:12px;}
         h3 {font-size:11px;}
-        #service-tree {
-            float:left;
-            width:250px;
-        }
-        #right-pane {
-            position:fixed;
-            left: 260px;
-            margin-top: -1px;
-        }
-        #form-container {
-            float:left;
-        }
-        #tab-container {
-            float: left;
-            margin: 5px;
-            padding-top: 6px;
-            margin-bottom: 0px;
-        }
-        .label {
-            width: 150px;
-            display: inline-block;
-            font-weight:bold;
-        }
-        .tab {
-            border:solid 1px gray;
-            padding:5px;
-            margin-right:2px;
-            background-color:#f8f6f0;
-            font-size:10px;
-            cursor:hand;
-            cursor:pointer;
-        }
-        .tab a {
-            margin-left:5px;
-        }
-        .selected {
-            background-color:#ffffff;
-            font-weight:bold;
-            font-size:11px;
-        }
-        .request {
-            float:left;
-            width: 400px;
-            border-right: solid 1px gray;
-            height: 100%;
-        }
-        .request h1 {
-            height:30px;
-        }
-        .request h1 input {
-            float: right;
-            margin-right: 10px;
-        }
-        .parameter {
-        }
-        .parameter-item {
-            display:inline-block;
-            margin-left:-3px;
-        }
-        .parameter-item select {
-            width: 153px;
-            height: 22px;
-            margin: 2px;
-        }
-        .parameter-item-added  {
-            margin-left:150px;
-        }
-        .response {
-            float: left;
-            overflow: auto;
-            height: 100%;
-        }
-        .response .label {
-            width:100px;
-        }
-		.response .result {
-            margin-left:5px;
-            clear:both;
-            display:block;
-            font-size: 16px;
-            font-weight: bold;
-		}
-        .response .success {
-            color:#18d003;
-		}
-		.response .error {
-            color:red;
-		}
-		.response .value{
-            font-weight:normal;
-		}
-        .object {
-            border: solid 1px gray;
-            margin:5px;
-            padding:5px;
-        }
-        .member {
-            margin-left:10px;
-        }
-        .member-item {
-            display:inline-block;
-        }
+        #service-tree {float:left;width:250px;}
+        #right-pane {position:fixed;left: 260px;margin-top: -1px;}
+        #form-container {float:left;}
+        #tab-container {float: left;margin: 5px;padding-top: 6px;margin-bottom: 0px;}
+        .label {width: 150px;display: inline-block;font-weight:bold;}
+        .tab {border:solid 1px gray;padding:5px;margin-right:2px;background-color:#f8f6f0;font-size:10px;cursor:hand;cursor:pointer;}
+        .tab a {margin-left:5px;}
+        .selected {background-color:#ffffff;font-weight:bold;font-size:11px;}
+        .request {float:left;width: 400px;border-right: solid 1px gray;height: 100%;}
+        .request h1 {height:30px;}
+        .request h1 input {float: right;margin-right: 10px;}
+        .parameter {}
+        .parameter-item {display:inline-block;margin-left:-3px;}
+        .parameter-item select {width: 153px;height: 22px;margin: 2px;}
+        .parameter-item-added  {margin-left:150px;}
+        .response {float: left;overflow: auto;height: 100%;}
+        .response .label {width:100px;}
+		.response .result {margin-left:5px;clear:both;display:block;font-size: 16px;font-weight: bold;}
+        .response .success {color:#18d003;}
+		.response .error {color:red;}
+		.response .value{font-weight:normal;}
+        .object {border: solid 1px gray;margin:5px;padding:5px;}
+        .member {margin-left:10px;}
+        .member-item {display:inline-block;}
     </style>
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript">
