#28 - MarkedAs added to CodeModel classes
- soatestpage, value model display bug fixed

--- a/Routine/Soa/View/SoaTestPage.html
+++ b/Routine/Soa/View/SoaTestPage.html
@@ -455,7 +455,7 @@
                         
                 if(value.Reference.IsNull) {
                     memberItemDiv.html("[null]");
-                } else if(getModel(value.Reference.ActualModelId) == null) {
+                } else if(getModel(value.Reference.ActualModelId).IsValueModel) {
                     memberItemDiv.html(value.Reference.Id);
                 }
             }
