--- a/Routine/Api/Template/T4/ClientApi.tt
+++ b/Routine/Api/Template/T4/ClientApi.tt
@@ -73,16 +73,17 @@ namespace <#= model.Namespace #>
 	<# } #>
 
 	<# foreach(var operation in model.Operations) { #>
+		<# foreach(var group in operation.Groups) { #>
 
 		public <#= operation.ReturnModel.FullName #> <#= operation.Id #>
-			(<#= string.Join(", ", operation.Parameters.Select(p => p.Model.FullName + " " + p.Id)) #>)
+			(<#= string.Join(", ", group.Select(p => p.Model.FullName + " " + p.Id)) #>)
 		{
 			var <#= operation.Id #>_result = Robject.Perform
 				(
 				"<#= operation.Id #>"
-		<# foreach(var parameter in operation.Parameters) { #>
+			<# foreach(var parameter in group) { #>
 				, <# ModelToRvariable(parameter); #>
-		<# } #>
+			<# } #>
 				)
 			;
 			
@@ -91,6 +92,7 @@ namespace <#= model.Namespace #>
 		<# } #>
 		}
 
+		<# } #>
 	<# } #>
 
 		public void Invalidate()
